--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
     --resultado-bg-color: #fcf9e7;
 }
 
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 main{
     margin-top: 5%;
     width: 100%;
