--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --heder-bg-color: #89f4e4;
     --font-color: #303232;
     --general-bg-color: #e7fcf9;
-    --resultado-bg-color: #fcf9e7;
+    --resultado-bg-color: #fafbfd;
 }
 
 *{
@@ -13,16 +13,26 @@
     padding: 0;
 }
 
+body{
+    background: #56CCF2;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 main{
-    
-    width: 100%;
+    margin: auto;
+    width: 30%;
     height: auto;
-    
+    background-color: green;
+    margin-top: 5%;
+    -webkit-box-shadow: 0px 0px 17px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 17px -4px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 17px -4px rgba(0,0,0,0.75);
 }
 
 .titulo{
     margin: auto;
-    width:30%;
+    width:100%;
     height: 7%;
     background-color: var(--heder-bg-color);
     color: var(--font-color);
@@ -30,12 +40,12 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 3%;
+    padding: 2% 0;
 }
 
 #contenedor{
     margin: auto;
-    width: 30%;
+    width: 100%;
     height: 250px;
     display: flex;
     flex-direction: row;
@@ -69,13 +79,15 @@ main{
 .estatura{
     width: 80%;
     display: flex;
-    flex-direction: column;
-    
+    flex-direction: column;    
 }
+
 .btn{
     width: 100%;
     text-align: center; 
+   
 }
+
 .btn input{
     width: 30%;
     height: 35px;
@@ -84,12 +96,14 @@ main{
     background-color: var(--heder-bg-color);
     color: var(--font-color);
     outline: none
+    -webkit-box-shadow: 0px 0px 17px -1px rgba(0,0,0,0.09);
+    -moz-box-shadow: 0px 0px 17px -1px rgba(0,0,0,0.09);
+    box-shadow: 0px 0px 17px -1px rgba(0,0,0,0.09);
 }
 
 .btn input:hover{
     background-color: #98ede0;
 }
-
 
 #msn{
     margin: auto;
